# kv_pet

./: CLAUDE.md  README.md  pyproject.toml
.plans/: current.md
.plans/archive/: 2026-01-10-2.md  2026-01-10.md  2026-01-11.md
docs/: csv_schema.md  kv_ee_research.md
output/: listings.csv
src/kv_pet/: __init__.py  cli.py  config.py  criteria.py  csv_store.py  fetcher.py  parser.py
tests/: test_csv_store.py  test_parser.py
tests/fixtures/: kv_ee_advanced_search.html  kv_ee_inactive.html  kv_ee_search_example.html  kv_ee_search_results.html  sample_listing.html  search_with_recommended.html
